--- a/package.json
+++ b/package.json
@@ -2,20 +2,13 @@
   "devDependencies": {
     "babel": "^6.1.18",
     "babel-core": "^6.0.0",
-    "babel-jest": "^6.0.1",
+    "babel-jest": "*",
     "babel-preset-es2015": "^6.1.18",
     "jest-cli": "*",
     "regenerator": "^0.8.42"
   },
   "scripts": {
     "test": "jest"
-  },
-  "jest-babel": {
-    "stage": 1,
-    "extensions": [
-      "es6",
-      "customext"
-    ]
   },
   "jest": {
     "scriptPreprocessor": "node_modules/babel-jest",
